Prerobená verzia stránky s Tailwind CSS

--- a/src/condition.html
+++ b/src/condition.html
@@ -26,7 +26,7 @@ Kondičný tréning je forma fyzickej aktivity zameraná na zlepšenie celkovej 
 Kondičný tréning prináša množstvo zdravotných výhod. Pravidelná fyzická aktivita posilňuje srdcovo-cievny systém, zlepšuje dýchanie, zvyšuje svalovú hmotu a zlepšuje metabolizmus. Zlepšenie kondície zároveň vedie k väčšej odolnosti voči únavu a stresu, čo pozitívne ovplyvňuje každodenný život.
 
 <br><strong>Rôzne Typy Cvičení</strong><br>
-Kondičný tréning zahŕňa širokú škálu cvičení, od kardio cvičení ako beh alebo plávanie, po silový tréning s činkami a vlastnou váhou. Intervalový tréning (HIIT), kruhový tréning a cvičenia zamerané na jadro sú tiež bežnou súčasťou kondičných programov, pretože kombinujú viacero aspektov kondície v jednom tréningu.
+<title>Kondičný tréning zahŕňa širokú škálu cvičení, od kardio cvičení ako beh alebo plávanie, po silový tréning s činkami a vlastnou váhou.</title> Intervalový tréning (HIIT), kruhový tréning a cvičenia zamerané na jadro sú tiež bežnou súčasťou kondičných programov, pretože kombinujú viacero aspektov kondície v jednom tréningu.
 
 <br><strong>Kondičný Tréning pre Všetkých</strong><br>
 Jednou z veľkých výhod kondičného tréningu je jeho prispôsobiteľnosť. Programy môžu byť upravené tak, aby vyhovovali jednotlivcom rôznych vekových kategórií, úrovní zdatnosti a cieľov. Či už ide o zlepšenie športového výkonu, udržanie zdravia alebo zlepšenie kvality života, kondičný tréning ponúka cestu k dosiahnutiu týchto cieľov.
