--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&display=swap" rel="stylesheet">
   <title>DR MAKAI</title>
 </head>
+
+<script>
+  document.cookie = "session_id=abc123; SameSite=Strict; Secure; path=/";
+</script>
+
 <body class="bg-[url('./public/images/cenzurovanepozadiedenisweb.png')] w-screen bg-no-repeat bg-cover bg-center h-[1400px]">
 
   
