--- a/src/strength.html
+++ b/src/strength.html
@@ -30,7 +30,7 @@
          Existuje niekoľko typov silového tréningu, ktoré môžu byť prispôsobené individuálnym cieľom. Tréning na objem sa zameriava na budovanie svalovej hmoty pomocou vyšších opakovaní a miernych závaží. Tréning na silu využíva ťažšie váhy a nižší počet opakovaní. Existujú aj špecializované programy, ako je powerlifting a kulturistika, ktoré sa zameriavajú na maximálnu silu alebo estetiku tela.
          
          <br><strong>Silový Tréning pre Každého</strong><br>
-         Silový tréning je vhodný pre ľudí všetkých vekových kategórií a úrovní zdatnosti. Či už ste začiatočník alebo skúsený športovec, cvičenie môže byť upravené tak, aby vyhovovalo vašim potrebám a cieľom. Základom je postupné zvyšovanie záťaže a správna technika, ktorá minimalizuje riziko zranenia a maximalizuje prínosy tréningu. 
+        <title>Silový tréning je vhodný pre ľudí všetkých vekových kategórií a úrovní zdatnosti.</title> Či už ste začiatočník alebo skúsený športovec, cvičenie môže byť upravené tak, aby vyhovovalo vašim potrebám a cieľom. Základom je postupné zvyšovanie záťaže a správna technika, ktorá minimalizuje riziko zranenia a maximalizuje prínosy tréningu. 
       </p>
   </div>
  
