--- a/src/bjj.html
+++ b/src/bjj.html
@@ -25,7 +25,7 @@ Brazílske Jiu-Jitsu (BJJ) je bojové umenie a šport, ktorý sa zameriava na te
 BJJ sa začalo formovať začiatkom 20. storočia, keď Mitsuyo Maeda, majster japonského judo, prišiel do Brazílie. Tu začal učiť judo rodinu Gracie, ktorá následne prispôsobila a rozvinula techniky na základe svojich skúseností. Takto vznikol nový štýl boja, ktorý sa dnes šíri po celom svete.
 
 <br><strong>Prínosy a Výhody</strong><br>
-Brazílske Jiu-Jitsu ponúka mnohé fyzické a psychické výhody. Posilňuje celé telo, zlepšuje koordináciu a flexibilitu. Na psychickej úrovni učí disciplínu, trpezlivosť a zvyšuje sebavedomie. Vďaka dôrazu na techniku a strategické myslenie je vhodné pre ľudí rôzneho veku a fyzickej zdatnosti.
+<title></e>Brazílske Jiu-Jitsu ponúka mnohé fyzické a psychické výhody. Posilňuje celé telo, zlepšuje koordináciu a flexibilitu.</title> Na psychickej úrovni učí disciplínu, trpezlivosť a zvyšuje sebavedomie. Vďaka dôrazu na techniku a strategické myslenie je vhodné pre ľudí rôzneho veku a fyzickej zdatnosti.
 
 <br><strong>Súťaže a Komunita</strong><br>
 BJJ sa stalo obľúbeným súťažným športom s tisíckami turnajov po celom svete, vrátane prestížnych podujatí ako Abu Dhabi World Professional Jiu-Jitsu Championship. Okrem toho sa BJJ komunita vyznačuje silným pocitom súdržnosti a kamarátstva, kde sa zdieľajú vedomosti a skúsenosti medzi trénermi a študentmi.
