--- a/src/boxing.html
+++ b/src/boxing.html
@@ -28,7 +28,7 @@
          Box má svoje korene v starovekom Grécku a Ríme, kde bol súčasťou olympijských hier. Moderný box sa začal formovať v 18. storočí v Anglicku, kde sa zaviedli pravidlá, ktoré zabezpečili bezpečnosť a férovosť zápasov. Najznámejším pravidlovým systémom je Marquess of Queensberry, ktorý vznikol v roku 1867 a stal sa základom pre moderný profesionálny box.
          
          <br><strong>Prínosy a Výhody</strong><br>
-         Box poskytuje vynikajúci fyzický tréning, zlepšuje kardiovaskulárnu kondíciu, silu a rýchlosť. Okrem fyzických prínosov rozvíja aj mentálne schopnosti, ako sú koncentrácia, sebadisciplína a strategické myslenie. Box tiež učí zvládať stresové situácie a buduje sebadôveru.
+         <title>Box poskytuje vynikajúci fyzický tréning, zlepšuje kardiovaskulárnu kondíciu, silu a rýchlosť.</title> Okrem fyzických prínosov rozvíja aj mentálne schopnosti, ako sú koncentrácia, sebadisciplína a strategické myslenie. Box tiež učí zvládať stresové situácie a buduje sebadôveru.
          
          <br><strong>Súťaže a Kultúra</strong><br>
          Box sa delí na amatérsky a profesionálny, pričom oba majú svoje špecifiká a prestížne podujatia. Olympijské hry sú vrcholom pre amatérskych boxerov, zatiaľ čo profesionálny box má viacero svetových organizácií, ktoré usporadúvajú titulové zápasy. Boxerská komunita je globálna, s bohatou históriou a silným vplyvom na populárnu kultúru, vrátane filmov, literatúry a hudby.
